--- a/app.json
+++ b/app.json
@@ -29,12 +29,12 @@
       "required": true
     },
     "DURATION_LIMIT": {
-      "description": "Duration Limit for Playout (In Mins).. Example: 60",
+      "description": "Əl dəymə",
       "value": "60",
       "required": true
     },
     "ASSISTANT_PREFIX": {
-      "description": "Prefix for Assistant Commands.",
+      "description": "Əl dəymə",
       "value": ".",
       "required": true
     },
@@ -44,17 +44,17 @@
       "required": true
     },
     "MUSIC_BOT_NAME": {
-      "description": "A name for your Music Bot.",
+      "description": "musiqi botun kullanıcı adin yaz məsələn belə: @musiqibotu",
       "value": "",
       "required": true
     },
     "SUPPORT_CHANNEL": {
-      "description": "Support Channel Link if you have any, Leave blank if no support. Your link must start with https://t.me/",
+      "description": "Support kanal linki. Bu linkle olmalıdı  https://t.me/",
       "value": "",
       "required": false
     },
     "SUPPORT_GROUP": {
-      "description": "Support Group Link if you have any, Leave blank if no support. Your link must start with https://t.me/",
+      "description": "Söhbət qrup linki. Bu linkle olmalıdı  https://t.me/",
       "value": "",
       "required": false
     },
@@ -64,27 +64,27 @@
       "required": true
     },
     "STRING_SESSION1": {
-      "description": "A Pyrogram String Session. One Assistant is Compulsory.",
+      "description": "stringi yaz",
       "value": "",
       "required": true
     },
     "STRING_SESSION2": {
-      "description": "A Pyrogram String Session. Leave blank if you dont want Multi-Assistant",
+      "description": "əl dəymə",
       "value": "",
       "required": false
     },
     "STRING_SESSION3": {
-      "description": "A Pyrogram String Session. Leave blank if you dont want Multi-Assistant",
+      "description": "əl dəymə",
       "value": "",
       "required": false
     },
     "STRING_SESSION4": {
-      "description": "A Pyrogram String Session. Leave blank if you dont want Multi-Assistant",
+      "description": "əl dəymə",
       "value": "",
       "required": false
     },
     "STRING_SESSION5": {
-      "description": "A Pyrogram String Session. Leave blank if you dont want Multi-Assistant",
+      "description": "əl dəymə",
       "value": "",
       "required": false
     },
@@ -94,7 +94,8 @@
       "required": false
     },
     "HEROKU_APP_NAME": {
-      "description": "Your heroku app/bot's name",
+      "description": "app adın burada yaz. App - name yəni
+",
       "value": "",
       "required": false
     },
@@ -104,22 +105,22 @@
       "required": true
     },
     "SUDO_USERS": {
-      "description": "The user id(s) of user(s) whom you would like to add as a SUDO. Multiple values shall be seperated with a space.",
+      "description": "öz idvi yapşdir.",
       "value": "",
       "required": true
     },
     "LOG_SESSION": {
-      "description": "A Pyrogram String Session for LOGGING or u can also add STRING_SESSION1 Also.",
+      "description": "STRING_SESSİON1 ə yazdığını burada yaz",
       "value": "",
       "required": true
     },
     "UPSTREAM_REPO": {
       "description": "If you dont know this, Leave as it is",
-      "value": "https://github.com/NotReallyShikhar/YukkiMusicBot",
+      "value": "https://github.com/XTQ067/HUSEYININ-REPOSU",
       "required": true
     },
     "UPSTREAM_BRANCH": {
-      "description": "Repo's Branch Name",
+      "description": "ƏL DƏYMƏ",
       "value": "master",
       "required": true
     }
