--- a/sample.env
+++ b/sample.env
@@ -1,13 +1,13 @@
 STRING_SESSION1 = PYROGRAMSESSION 
 API_ID = 6
-API_HASH = eb06d4abfb49dc3eeb1aeb98ae0f581e
-BOT_TOKEN = 504729834470:AAHidqz_M26xIem_Cn4Hs3BHrIokG1W43bo
+API_HASH = e18ea5f885bea14530550a14cf156f5d
+BOT_TOKEN = 504729834470:5275311204:AAFupPFPTO7_aQpq-k_mt0SidCONfvcX8Gg
 SUDO_USERS = 18920183 39103921 
 MONGO_DB_URI = mongodb+srv://a:a@a.a.mongodb.net/a?retryWrites=a&w=majority
 LOG_GROUP_ID = -1003209382042
-MUSIC_BOT_NAME = Yukki
-OWNER_ID = 482049203
+MUSIC_BOT_NAME = Werab Music Bot
+OWNER_ID = 1809457546
 DURATION_LIMIT = 90
-SUPPORT_CHANNEL = https://t.me/OfficialYukki
-SUPPORT_GROUP = https://t.me/YukkiSupport
+SUPPORT_CHANNEL = https://t.me/WerabSupport
+SUPPORT_GROUP = https://t.me/WerabliAnlar
 ASSISTANT_PREFIX = !
